# k23VM

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain.toml  typos.toml
.github/workflows/: ci.yml
benches/: compilation.rs  translation.rs
old/: build.rs  func.rs  global.rs  instance.rs  instance_allocator.rs  linker.rs  memory.rs  module.rs  store.rs  table.rs
old/placeholder/: code_registry.rs  instance_allocator.rs  mmap.rs  mod.rs  signals.rs
old/runtime/: builtins.rs  code_memory.rs  instance.rs  memory.rs  mmap_vec.rs  table.rs
old/runtime/trap_handling/: backtrace.rs  mod.rs
src/: builtins.rs  code_memory.rs  const_eval.rs  engine.rs  errors.rs  func.rs  global.rs  indices.rs  instance.rs  instance_allocator.rs  lib.rs  linker.rs  memory.rs  mmap_vec.rs  module.rs  store.rs  table.rs  trap.rs  traps.rs  type_registry.rs  utils.rs  values.rs  vmcontext.rs
src/baseline/: mod.rs
src/compile/: address_map.rs  compile_key.rs  compiled_function.rs  compiler.rs  key.rs  mod.rs  obj_builder.rs  trap.rs
src/compile_cranelift/: compiled_function.rs  compiler.rs  mod.rs  obj_builder.rs
src/cranelift/: builtins.rs  code_translator.rs  compile.rs  compiler.rs  env.rs  func_translator.rs  memory.rs  mod.rs  state.rs  utils.rs
src/cranelift/translate/: builtins.rs  code_translator.rs  env.rs  func_translator.rs  global.rs  heap.rs  mod.rs  state.rs  table.rs  utils.rs
src/guest_memory/: code_memory.rs  mmap.rs  mod.rs  vec.rs
src/parse/: const_expr.rs  mod.rs  module_parser.rs
src/placeholder/: arch.rs  code_registry.rs  instance_allocator.rs  mmap.rs  mod.rs  setjmp.rs  signals.rs
src/placeholder/trap_handling/: backtrace.rs  mod.rs
src/runtime/: builtins.rs  code_memory.rs  const_eval.rs  instance.rs  instance_allocator.rs  memory.rs  mmap_vec.rs  mod.rs  owned_vmcontext.rs  table.rs  vmcontext.rs  vmoffsets.rs
src/translate/: code_translator.rs  const_expr.rs  env.rs  func_translator.rs  heap.rs  mod.rs  module_strings.rs  module_translator.rs  module_types.rs  state.rs  table.rs  type_convert.rs  types.rs  utils.rs
src/translate_cranelift/: builtins.rs  code_translator.rs  env.rs  func_translator.rs  heap.rs  mod.rs  state.rs  table.rs  utils.rs
src/vm/: arch.rs  builtins.rs  code_memory.rs  instance.rs  memory.rs  mmap_vec.rs  mod.rs  table.rs  vmcontext.rs
src/vm/trap_handling/: backtrace.rs  mod.rs
tests/: call_ref.rs  embenchen_fannkuch.rs  embenchen_fannkuch.wat  fib_cpp.rs  fib_cpp.wat  kiwi_editor.rs  trap.wasm  trap.wat  wast._rs  wast.rs
tests/spec/: align.wast  bulk.wast  linking.wast  traps.wast
tests/spec/proposals/function-references/: linking.wast
tests/spec/proposals/gc/: array_copy.wast  array_fill.wast  array_init_data.wast  array_init_elem.wast  linking.wast
tests/spec/proposals/memory64/: align64.wast
tests/spec/proposals/multi-memory/: linking3.wast  memory_copy0.wast  memory_copy1.wast  memory_fill0.wast  memory_init0.wast
