[package]
name = "k23-vm"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Kruckenberg <iterpre@protonmail.com>"]
license = "MIT"
#
#[[bench]]
#name = "translation"
#harness = false
#
#[[bench]]
#name = "compilation"
#harness = false

[dependencies]
tracing = { version = "0.1.40", default-features = false, features = ["attributes", "log"] }
gimli = { version = "0.31.0", default-features = false, features = ["read"] }
onlyerror = { version = "0.1.4", default-features = false }
smallvec = { version = "1.6.1", features = ["union"] }
cfg-if = "1.0.0"

rustix = { version = "0.38.37", default-features = false, features = ["mm"] }
libc = "0.2.161"
spin = { version = "0.9.8", default-features = false, features = ["lock_api", "mutex", "rwlock", "spin_mutex", "once"] }

# cranelift dependencies
hashbrown = { version = "0.15", default-features = false, features = [
    "inline-more",
    "nightly",
    "default-hasher",
    "serde"
] }
wat = "1.219.1"
wasmparser = { version = "0.219", default-features = false, features = ["features", "validate", "component-model"] }
target-lexicon = { version = "0.12.14", default-features = false }
cranelift-codegen = { version = "0.113.0", default-features = false, features = ["std", "host-arch"] }
cranelift-frontend = { version = "0.113.0", default-features = false, features = ["std"] }
cranelift-entity = { version = "0.113.0", default-features = false }
wasmtime-slab = "26.0.1"

[dev-dependencies]
test-log = "0.2.16"
anyhow = "1.0.91"
wast = { version = "219.0.1", features = ["dwarf"] }
criterion = "0.5.1"
capstone = { version = "0.12.0", default-features = false, features = ["full"] }

[build-dependencies]
bindgen = "0.70.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
overflow-checks = true
split-debuginfo = "packed"

[profile.bench]
debug = true

[features]
no_std = []