[package]
name = "k23vm"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Kruckenberg <iterpre@protonmail.com>"]
license = "MIT"

[[bench]]
name = "translation"
harness = false

[[bench]]
name = "compilation"
harness = false

[dependencies]
tracing = { version = "0.1.40", default-features = false, features = ["attributes", "log"] }
gimli = { version = "0.31.0", default-features = false, features = ["read"] }
onlyerror = { version = "0.1.4", default-features = false }
smallvec = { version = "1.6.1", features = ["union"] }
cfg-if = "1.0.0"

rustix = { version = "0.38.37", default-features = false, features = ["mm"] }
libc = "0.2.161"
spin = { version = "0.9.8", default-features = false, features = ["lock_api", "mutex", "rwlock", "spin_mutex", "once"] }

# cranelift dependencies
hashbrown = { version = "0.15", default-features = false, features = [
    "inline-more",
    "nightly",
    "default-hasher",
    "serde"
] }
wat = "1.219.1"
wasmparser = { version = "0.219", default-features = false, features = ["features", "validate", "component-model"] }
target-lexicon = { version = "0.12.14", default-features = false }
cranelift-codegen = { version = "0.113.0", default-features = false, features = ["std", "host-arch"] }
cranelift-frontend = { version = "0.113.0", default-features = false, features = ["std"] }
cranelift-entity = { version = "0.113.0", default-features = false }
wasmtime-slab = "26.0.1"

[dev-dependencies]
test-log = "0.2.16"
anyhow = "1.0.91"
wast = { version = "219.0.1", features = ["dwarf"] }
criterion = "0.5.1"
capstone = { version = "0.12.0", default-features = false, features = ["full"] }

[build-dependencies]
bindgen = "0.70.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
overflow-checks = true
split-debuginfo = "packed"

[profile.bench]
debug = true

[features]
no_std = []

[lints.clippy]
# numeric safety
#arithmetic_side_effects = "deny" TODO audit arithmetic & reenable
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
cast_lossless = "deny"
default_numeric_fallback = "deny"
checked_conversions = "deny"
float_arithmetic = "deny"
float_cmp = "deny"

# pointer safety
cast_ptr_alignment = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
ref_as_ptr = "deny"
transmute_ptr_to_ptr = "deny"

## panic safety
#indexing_slicing = "deny"
#panic = "deny"
#panic_in_result_fn = "deny"

# stack overflow prevention
large_futures = "deny"
large_stack_arrays = "deny"
large_stack_frames = "deny"
large_types_passed_by_value = "deny"

# style
undocumented_unsafe_blocks = "deny"
as_underscore = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
default_trait_access = "deny"
cloned_instead_of_copied = "deny"
fn_params_excessive_bools = "deny"
struct_excessive_bools = "deny"
filter_map_next = "deny"
explicit_iter_loop = "deny"
flat_map_option = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
manual_assert = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
match_bool = "deny"
missing_fields_in_debug = "deny"
semicolon_if_nothing_returned = "deny"
trivially_copy_pass_by_ref = "deny"
unnecessary_wraps = "deny"
unnested_or_patterns = "deny"
too_many_arguments = "allow"

# docs
missing_panics_doc = "deny"
missing_errors_doc = "deny"
